feat(java 8) fix debug mode for java 8 (#233)
* feat(java 8) fix debug mode for java 8

Closes [BS-16204](https://bonitasoft.atlassian.net/browse/BS-16204)

* feat(java 8) fix debug mode for java 8

- Remove unneeded dependencies versions (already declared engine-side)
- Complete README.md files

Covers [BS-16204](https://bonitasoft.atlassian.net/browse/BS-16204)

* feat(java 8) fix debug mode for java 8

- Put database files in a .bonita directory instead

Covers [BS-16204](https://bonitasoft.atlassian.net/browse/BS-16204)