@@ -17,7 +17,7 @@
         <enable.engine.listener.end>--&gt;</enable.engine.listener.end>
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
         <build.year>${maven.build.timestamp}</build.year>
-        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+        <tomcat.home>${project.build.directory}/tomcat8x</tomcat.home>
     </properties>
 
     <dependencies>
@@ -222,6 +222,15 @@
 
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.bonitasoft.tomcat</groupId>
+                <artifactId>bonita-tomcat-h2-listener</artifactId>
+                <version>1.0.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>    
     <build>
         <resources>
             <resource>
@@ -306,7 +315,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
     <profiles>
@@ -369,7 +377,7 @@
                         <artifactId>maven-antrun-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>Jetty Test web.xml set up</id>
+                                <id>web.xml Test set up</id>
                                 <goals>
                                     <goal>run</goal>
                                 </goals>
@@ -400,105 +408,158 @@
                                     </target>
                                 </configuration>
                             </execution>
+                            <!-- Remove the jars from the cargo webapp as their classes are copied in WEB-INF/classes -->
+                            <execution>
+                                <id>create debug war</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>pre-integration-test</phase>
+                                <inherited>false</inherited>
+                                <configuration>
+                                    <target>
+                                        <copy todir="${project.build.directory}/tomcat-deployable">
+                                        <fileset dir="${project.build.directory}/${project.build.finalName}" >
+                                          <exclude name="**/console-server-*.jar"/>
+                                          <exclude name="**/console-common-*.jar"/>
+                                          <exclude name="**/console-client-*.jar"/>
+                                        </fileset>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
 
-
-                    <!-- Jetty configuration -->
+                    <!-- Cargo with Tomcat 8 -->
                     <plugin>
-                        <groupId>org.mortbay.jetty</groupId>
-                        <artifactId>maven-jetty-plugin</artifactId>
-                        <version>6.1.26</version>
+                        <groupId>org.codehaus.cargo</groupId>
+                        <artifactId>cargo-maven2-plugin</artifactId>
+                        <version>1.5.0</version>
                         <configuration>
-                            <systemProperties>
-                                <systemProperty>
-                                    <name>database.dir</name>
-                                    <value>${project.build.directory}/database</value>
-                                </systemProperty>
-                                <systemProperty>
-                                    <name>sysprop.bonita.db.vendor</name>
-                                    <value>h2</value>
-                                </systemProperty>
-                            </systemProperties>
-                            <webAppConfig>
-                                <contextPath>/bonita</contextPath>
-                                <baseResource implementation="org.mortbay.resource.ResourceCollection">
-                                    <resourcesAsCSV>${basedir}/../portal/target/console-client-${project.version}/,${basedir}/target/console-server-${project.version}/,${basedir}/src/main/webapp</resourcesAsCSV>
-                                </baseResource>
-                            </webAppConfig>
-                            <scanIntervalSeconds>0</scanIntervalSeconds>
-                            <webXml>${basedir}/target/console-server-${project.version}/WEB-INF/web.xml</webXml>
-                            <jettyConfig>src/test/webapp/WEB-INF/jetty.xml</jettyConfig>
-                            <jettyEnvXml>src/test/webapp/WEB-INF/jetty-env.xml</jettyEnvXml>
-                            <webAppSourceDirectory>${webappDirectory}</webAppSourceDirectory>
+                            <container>
+                                <!-- https://codehaus-cargo.github.io/cargo/Maven2+Plugin+Reference+Guide.html#Maven2PluginReferenceGuide-container -->
+                                <containerId>tomcat8x</containerId>
+                                <output>${project.build.directory}/tomcat8x/cargo-bonita.log</output>
+                                <!-- If true, then the file specified by <output> will not be erased across different runs -->
+                                <append>false</append>
+                                <!-- set this value if your web app is taking some time to start -->
+                                <!--timeout>360000</timeout-->
+                                <dependencies>
+                                    <dependency>
+                                        <location>${project.build.directory}/tomcat-libs</location>
+                                    </dependency>
+                                </dependencies>
+
+                                <systemProperties>
+                                    <sysprop.bonita.db.vendor>h2</sysprop.bonita.db.vendor>
+                                    <sysprop.bonita.bdm.db.vendor>h2</sysprop.bonita.bdm.db.vendor>
+                                    <db.vendor>h2</db.vendor>
+
+                                    <file.encoding>${project.build.sourceEncoding}</file.encoding>
+                                    <javax.xml.parsers.DocumentBuilderFactory>
+                                        com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
+                                    </javax.xml.parsers.DocumentBuilderFactory>
+
+                                    <!-- Bitronix properties -->
+                                    <btm.root>${tomcat.home}</btm.root>
+                                    <bitronix.tm.configuration>${tomcat.home}/conf/btm-config.properties
+                                    </bitronix.tm.configuration>
+                                </systemProperties>
+                                
+                            </container>
+                            <configuration>
+                                <type>standalone</type>
+                                <home>${tomcat.home}</home>
+                                <properties>
+                                    <cargo.servlet.port>8080</cargo.servlet.port>
+                                    <cargo.logging>high</cargo.logging>
+                                    <cargo.jvmargs>-XX:MaxPermSize=512m -Xms256m -Xmx3072m -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -XX:+DisableExplicitGC -Xverify:none -Djava.awt.headless=true</cargo.jvmargs>
+                                </properties>
+                                <files>
+                                    <!-- copy classes -->
+                                    <file>
+                                        <file>${basedir}/../portal/target/classes</file>
+                                        <todir>webapps/bonita/WEB-INF/classes</todir>
+                                    </file>
+                                    <file>
+                                        <file>${basedir}/../common/target/classes</file>
+                                        <todir>webapps/bonita/WEB-INF/classes</todir>
+                                    </file>
+                                    <file>
+                                        <file>${basedir}/target/classes</file>
+                                        <todir>webapps/bonita/WEB-INF/classes</todir>
+                                    </file>
+                                    <!-- copy war resources -->
+                                    <file>
+                                        <file>${basedir}/../portal/src/main/webapp</file>
+                                        <todir>webapps/bonita</todir>
+                                    </file>
+                                    <file>
+                                        <file>${basedir}/../portal/target/console-client-${project.version}/portal</file>
+                                        <todir>webapps/bonita/portal</todir>
+                                    </file>
+                                    <file>
+                                        <file>${basedir}/src/test/resources/tomcat/conf</file>
+                                        <todir>./conf</todir>
+                                    </file>
+                                </files>
+                            </configuration>
+                            <deployables>
+                                <deployable>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <type>war</type>
+                                    <location>${project.build.directory}/tomcat-deployable</location>
+                                    <properties>
+                                        <!-- set the context for your web app so the correct configuration is applied -->
+                                        <context>/bonita</context>
+                                    </properties>
+                                </deployable>
+                            </deployables>
                         </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.bonitasoft.web.tooling</groupId>
-                                <artifactId>bonita-web-devtools</artifactId>
-                                <version>1.0.1</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.slf4j</groupId>
-                                <artifactId>slf4j-api</artifactId>
-                                <version>1.6.1</version>
-                                <scope>runtime</scope>
-                            </dependency>
-
-                            <!-- DATASOURCE JNDI -->
-                            <dependency>
-                                <groupId>commons-dbcp</groupId>
-                                <artifactId>commons-dbcp</artifactId>
-                                <version>1.4</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.mortbay.jetty</groupId>
-                                <artifactId>jetty-naming</artifactId>
-                                <version>6.1.26</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.mortbay.jetty</groupId>
-                                <artifactId>jetty-plus</artifactId>
-                                <version>6.1.26</version>
-                                <scope>runtime</scope>
-                            </dependency>
-
-                            <!-- DATASOURCE JTA -->
-                            <dependency>
-                                <groupId>org.codehaus.btm</groupId>
-                                <artifactId>btm</artifactId>
-                                <version>2.1.3</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>javax.transaction</groupId>
-                                <artifactId>jta</artifactId>
-                                <version>1.1</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.codehaus.btm</groupId>
-                                <artifactId>btm-jetty6-lifecycle</artifactId>
-                                <version>2.0.1</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                            <dependency>
-                                <groupId>com.h2database</groupId>
-                                <artifactId>h2</artifactId>
-                                <version>1.3.170</version>
-                                <scope>runtime</scope>
-                            </dependency>
-                        </dependencies>
                     </plugin>
-
                     <!-- Themes needs to be on the classes path -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                         <executions>
+                            <execution>
+                                <id>copy-tomcat-libs</id>
+                                <phase>generate-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>javax.transaction</groupId>
+                                            <artifactId>jta</artifactId>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.slf4j</groupId>
+                                            <artifactId>slf4j-api</artifactId>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.codehaus.btm</groupId>
+                                            <artifactId>btm</artifactId>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.codehaus.btm</groupId>
+                                            <artifactId>btm-tomcat55-lifecycle</artifactId>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>com.h2database</groupId>
+                                            <artifactId>h2</artifactId>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.bonitasoft.tomcat</groupId>
+                                            <artifactId>bonita-tomcat-h2-listener</artifactId>
+                                        </artifactItem>
+                                    </artifactItems>
+                                    <outputDirectory>${project.build.directory}/tomcat-libs</outputDirectory>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>copy-looknfeel</id>
                                 <phase>generate-resources</phase>
@@ -527,6 +588,25 @@
                                         </artifactItem>
                                     </artifactItems>
                                     <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>unpack-i18n</id>
+                                <phase>generate-resources</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.bonitasoft.console</groupId>
+                                            <artifactId>i18n</artifactId>
+                                            <version>${project.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>true</overWrite>
+                                            <outputDirectory>${project.build.directory}/classes/i18n</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
                                 </configuration>
                             </execution>
                         </executions>
